# chatbot-backend-python

./: .gitignore  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 28bfcfa85804_creating_tabloie.py  3040b88130b2_your_descriptive_message.py  363f40751bd9_your_descriptive_messag2.py  51c010ebb5e5_your_descriptive_message.py  607b4d625c47_your_descriptive_message.py  6baea39d1c63_your_descriptive_message.py  7bfbad20a0c4_your_massege_message.py  90eda62c9c2b_your_descriptive_message1.py  a39b40353b3c_creating_table.py  af4b2d7829f7_your_descriptive_2.py  b774d9c7ccff_your_descriptive_1.py  ba1cff8203f6_your_descriptive_mess2.py  e090dbe6f6cf_creating_tablie.py  fcd3be7dcb3d_creating_tablie.py  ffab1db2ba4c_customer_table.py
app/: main.py
app/agent/: agent_graph.py  agent_state.py  llm.py  llm_manager.py  query_service.py  sql_agent.py
app/agent/nodes/: chatbot_node.py  tool_caller_node.py
app/agent/tools/: sql_query_tool.py
app/api/routes/: chatRoutes.py  session.py
app/core/: config.py  database.py
app/models/: chatLog.py  customer.py  init_.py  item.py  order_detail.py  session.py
app/schemas/: chatLog_schema.py  customer_schema.py  session.py
app/service/: chatLog_service.py  session_service.py
