[project]
name = "chat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.118.2",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "langgraph>=0.2.50",
    "langchain-community>=0.3.31",
]

[tool.setuptools]
packages = ["app", "alembic"]

#[tool.uv.scripts]
#server = "uvicorn app.main:app --reload"